java11: fix minor warnings (deprecations)
* assertThat
* new Long